--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".StudentsProvider"
+            android:authorities="com.example.provider.College"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
